# AVIANS_ROS2

./: .gitignore  .gitmodules  .setup_avians_ros2_complete.sh  NMPC_工作原理与路径点生成.md  PX4_INTEGRATION_GUIDE.md  README.md  README_SIMULATION.md  camera_adaptation_report.md  check_gazebo.sh  comprehensive_test_suite.sh  debug_odometry.sh  debug_step_by_step.sh  debug_tf.sh  depth_prediction_analysis_report.md  drone_enabler.py  drone_tf_publisher.py  final_test.sh  fix_topic_mapping.sh  fix_yolo_paths.sh  frames_2025-06-17_12.59.30.gv  frames_2025-06-17_13.09.35.gv  frames_2025-06-17_15.54.10.gv  frames_2025-06-17_19.00.14.gv  frames_2025-06-17_22.43.34.gv  frames_2025-06-17_22.55.54.gv  gpu_debug.sh  jazzy_yolo_test.py  kill.sh  launch_drone_simulation.py  launch_yolo_simple.sh  lost_hold_improvement.md  minimal_yolo_test.py  pixhawk_hitl_test.sh  pose_to_odom.py  project_summary.md  quick_start.sh  run_test5.sh  setup_avians_ros2.sh  simple_test.py  system_monitor.py  (+16 more)
avians-docker/: Dockerfile  README.md  build.sh  docker-compose.yml  run.sh  shell.sh  stop.sh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/drone_description/share/ament_index/resource_index/parent_prefix_path/: drone_description
install/drone_description/share/drone_description/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/drone_description/share/drone_description/config/: bridge.yaml  drone.rviz
install/drone_description/share/drone_description/models/: x3
install/drone_description/share/drone_description/worlds/: drone_world.sdf  test_world.sdf
log/: latest_build  latest_list
scripts/: debug_control_topics.py
src/custom_msgs/neural_network_msgs/: CMakeLists.txt  package.xml
src/custom_msgs/uav_msgs/: CMakeLists.txt  package.xml  ros1_bridge_mapping_rules.yaml
src/custom_msgs/uav_msgs/msg/: UAVPose.msg
src/drone_description/: CMakeLists.txt  package.xml
src/drone_description/config/: bridge.yaml  drone.rviz  drone.rviz.bak
src/drone_description/launch/: gz.launch.py
src/drone_description/models/actor/: model.sdf
src/drone_description/models/barcs_qav500_sensor_config_1/: model.config  model.sdf
src/drone_description/models/x3/: model.sdf
src/drone_description/src/: waypoint_controller.cpp
src/drone_description/urdf/: x3_drone.urdf
src/drone_description/worlds/: drone_world.sdf  drone_world.sdf.bak
src/drone_low_level_controllers/: CMakeLists.txt  package.xml
src/drone_low_level_controllers/config/: controllers.yaml
src/drone_low_level_controllers/drone_low_level_controllers/: attitude_controller.py  velocity_controller.py  waypoint_controller.py
src/drone_low_level_controllers/launch/: low_level_controllers.launch.py
src/drone_nmpc_tracker/: README.md  package.xml  setup.py
src/drone_nmpc_tracker/config/: nmpc_params.yaml
src/drone_nmpc_tracker/drone_nmpc_tracker/: __init__.py  config.py  nmpc_controller.py  nmpc_node.py  pose_to_odom_bridge.py  test_node.py
src/drone_nmpc_tracker/launch/: nmpc_gazebo_tracking.launch.py  nmpc_tracker.launch.py
src/drone_nmpc_tracker/scripts/: nmpc_test_node  nmpc_tracker_node
src/drone_state_publisher/: CMakeLists.txt  package.xml
src/drone_state_publisher/include/drone_state_publisher/: drone_state_publisher.hpp
src/drone_state_publisher/launch/: simulation.launch.py  simulation.launch.py.backup
src/drone_state_publisher/src/: drone_state_publisher.cpp  odometry_bridge.cpp
src/neural_network_detector/: CMakeLists.txt  CMakeLists.txt.bak  package.xml
src/neural_network_detector/config/: yolo.yaml
src/neural_network_detector/include/cv/extensions/: projection.h
src/neural_network_detector/include/neural_network_detector/: yolo12_detector_node.hpp
src/neural_network_detector/msg/: NeuralNetworkDetection.msg
src/neural_network_detector/scripts/: detection_visualizer.py
src/neural_network_detector/src/: detection_visualizer_node.cpp  neural_network_detector_node.cpp  yolo12_detector_node.cpp  yolo12_detector_node.cpp.backup
src/person_tracker/: package.xml  setup.py
src/person_tracker/person_tracker/: yolo_detector.py
src/pose_cov_ops_interface/: CMakeLists.txt  package.xml
src/pose_cov_ops_interface/include/pose_cov_ops_interface/: pose_cov_ops_interface.h
src/pose_cov_ops_interface/src/: pose_cov_ops_interface.cpp  pose_cov_ops_interface_node.cpp
src/pose_cov_ops_interface/test/: test_pose_cov_ops_interface.cpp
src/projection_model/: CMakeLists.txt  package.xml
src/projection_model/config/: projector_params.yaml
src/projection_model/include/projection_model/: Projector.hpp  person_tracker_projection_node.hpp
src/projection_model/include/projection_model/models/: Model3D.h  ModelBase.h
src/projection_model/launch/: test.launch.py
src/projection_model/src/: Projector.cpp  main.cpp  person_tracker_projection_node.cpp
src/projection_model/src/models/: Model3D.cpp
src/px4_bridge/: CMakeLists.txt  README.md  package.xml
src/px4_bridge/launch/: px4_bridge.launch.py
src/px4_bridge/src/: px4_bridge_node.cpp
src/ros2_utils/: CMakeLists.txt  README.md  package.xml
src/ros2_utils/data/timing_logs/: session_20250618_1351.csv  session_20250618_1419.csv
src/ros2_utils/include/ros2_utils/: clock_sync.hpp
src/ros2_utils/launch/: timestamp_monitor.launch.py
src/ros2_utils/scripts/: analyze_timing.py
src/ros2_utils/src/: timestamp_monitor.cpp
src/target_tracker_distributed_kf/: CMakeLists.txt  package.xml
src/target_tracker_distributed_kf/config/: tracker_params.yaml
src/target_tracker_distributed_kf/include/target_tracker_distributed_kf/: DistributedKF3D.h
src/target_tracker_distributed_kf/launch/: tracker.launch.py
src/target_tracker_distributed_kf/src/: DistributedKF3D.cpp  main.cpp
src/tf_from_uav_pose/: CMakeLists.txt  package.xml
src/tf_from_uav_pose/config/: tf_from_uav_pose_params.yaml
src/tf_from_uav_pose/include/tf_from_uav_pose/: tf_from_uav_pose.hpp
src/tf_from_uav_pose/launch/: tf_from_uav_pose.launch.py
src/tf_from_uav_pose/src/: tf_from_uav_pose.cpp
(+4 files in other folders)
