<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>projection_model</name>
  <version>1.0.0</version>
  <description>ROS2 node for projecting person detections to 3D waypoints for drone tracking</description>
  <maintainer email="mohmedsayed0990@gmail.com">Mohamed Abdelmawgoud</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <build_depend>neural_network_detector</build_depend>
  <exec_depend>neural_network_detector</exec_depend> 
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  <depend>nav_msgs</depend>
  <build_depend>tf2_ros</build_depend>
  <exec_depend>tf2_ros</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>