<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypes="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_from_uav_pose_ros2</name>
  <version>1.0.0</version>
  <description>ROS2 migration of tf_from_uav_pose - publishes TF transforms and pose messages from UAV pose data</description>

  <maintainer email="your.email@example.com">Your Name</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ros2_utils</depend>


  <!-- UAV messages - you'll need to adapt this based on your ROS2 UAV message package -->
  <depend>uav_msgs</depend>

  <!-- Note: MRPT dependencies removed to avoid compatibility issues -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>